RESOLVED FIXED132477
Crash inside [WebSharingServicePickerController clear]
https://bugs.webkit.org/show_bug.cgi?id=132477
Summary Crash inside [WebSharingServicePickerController clear]
Brady Eidson
Reported 2014-05-02 12:15:07 PDT
Crash inside [WebSharingServicePickerController clear] Clear can be called twice on the same picker, so the _menuClient needs a null check. In radar as <rdar://problem/16791944>
Attachments
Patch v1 (3.32 KB, patch)
2014-05-02 12:17 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2014-05-02 12:17:55 PDT
Created attachment 230681 [details] Patch v1
WebKit Commit Bot
Comment 2 2014-05-02 13:01:20 PDT
Comment on attachment 230681 [details] Patch v1 Clearing flags on attachment: 230681 Committed r168185: <http://trac.webkit.org/changeset/168185>
WebKit Commit Bot
Comment 3 2014-05-02 13:01:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.