Crash inside [WebSharingServicePickerController clear] <rdar://problem/16791944> and https://bugs.webkit.org/show_bug.cgi?id=132477

Reviewed by Tim Horton.

* Misc/WebSharingServicePickerController.h:
* Misc/WebSharingServicePickerController.mm:
(-[WebSharingServicePickerController clear]): clear can be called twice, so null check _menuClient.

* WebCoreSupport/WebContextMenuClient.h:
* WebCoreSupport/WebContextMenuClient.mm:
(WebContextMenuClient::~WebContextMenuClient): For a sanity check, call clear on the picker here.


Canonical link: https://commits.webkit.org/150515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168185 268f45cc-cd09-0410-ab3c-d52691b4dbfc