Source/WebKit/mac/Misc/WebSharingServicePickerController.h
@@ -42,6 +42,7 @@ class WebContextMenuClient;
 - (instancetype)initWithData:(NSData *)data includeEditorServices:(BOOL)includeEditorServices menuClient:(WebContextMenuClient*)menuClient;
 - (NSMenu *)menu;
 - (void)didShareImageData:(NSData *)data confirmDataIsValidTIFFData:(BOOL)confirmData;
+- (void)clear;
 
 @end
 
